NIFI-12648 Refactor components in elasticsearch bundle using current API methods